[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/playerShip.png.png" type="Texture" id=1]
[ext_resource path="res://scripts/ship.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 210.0
height = 102.0

[node name="PlayerShip" type="KinematicBody2D"]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["player"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -230, 250, 230, 240, 230, 240, 60, -90, 40, -100, 40, -200, 10, -250, -10, -250, -40, -190, -40, -90 )

[node name="Muzzle" type="Position2D" parent="." groups=["player"]]
position = Vector2( 0, -320 )

[node name="ShotTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
